# nutrimovic

./: .gitignore  CONTRATOS.md  DEPLOY.md  PLAN_MAESTRO.md  README.md  index.html  manifest.webmanifest  offline.html  sw.js
assets/: index-6HugrGLH.js  index-BSyd-dYr.js  index-B_zItz3B.css  index-CCY1marE.css  index-CyVlRCHT.js  index-DPAFE3Rc.css  index-Dr_OeXaD.css  index-ftCuuuJD.js
backend/: pyproject.toml
backend/app/: main.py
backend/app/clinical/: __init__.py  anthropometry.py  energy.py  models.py
backend/app/core/: config.py  models.py  nutrients.py
backend/app/data/: repository.py
backend/app/engine/: aggregator.py  calculator.py  derived.py
backend/app/etl/: __init__.py  bedca_loader.py  build_db.py  ciqual_loader.py  export_catalog.py  harvest_usda.py  normalize_subgroups.py  run_etl.py  schema.sql  themealdb.py  usda_client.py  value_parsing.py
backend/app/exchanges/: __init__.py  seen_sed.py
backend/app/reference/: __init__.py  coverage.py  profiles.py  vrn_ue.py
backend/tests/: test_clinical.py  test_engine.py  test_etl.py  test_etl_real.py  test_exchanges.py  test_reference.py
data/: LICENCIAS_DATOS.md
data/seed/: foods_seed.json
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  shoot.mjs  tailwind.config.js  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/scripts/: generate-icons.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: calculate.ts  client.ts  exchanges.ts  foods.ts  plate.ts  reference.ts
frontend/src/components/: AlertsPanel.tsx  ComingSoon.tsx  DietSheet.tsx  (+13 more)
(+22 files in other folders)
