[project]
name = "nutrimovic-backend"
version = "0.1.0"
description = "NutriMovic — motor nutricional por gramaje + intercambios SEEN/SED"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
# Dependencias solo del pipeline ETL (no las necesita la API en producción):
# lectura del XLS de CIQUAL (xlrd), carga de backend/.env (python-dotenv) y,
# opcionalmente, pandas para inspección tabular.
etl = [
    "python-dotenv>=1.0",
    "xlrd>=2.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
